--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
     </style>
   </head>
   <body>
-  	<div class="demo-dot"></div>
-  	<div class="demo-dot"></div>
-  	<div class="demo-dot"></div>
+  	<div id="holder" style="margin-top: 25%; margin-left: 25%">
+	  	<div class="demo-dot"></div>
+	  	<div class="demo-dot"></div>
+	  	<div class="demo-dot"></div>
+  	</div>
   </body>
   <script>
   //update them all first
