--- a/index.html
+++ b/index.html
@@ -104,34 +104,84 @@
   var start = null;
   var stretchFactor;
 
+var ch = window.innerHeight,
+  cy = ch / 2;
+var cw = window.innerWidth,
+  cx = cw / 2;
+
+
+var R = 200;
+var t = 0;
+var x;
+var y;
+// function Draw() {
+//   t += .03;
+//   // ctx.clearRect(0, 0, cw, ch);
+//   for (var i = 0; i < 15; i++) {
+//     drawPoint(t + i / 20, 5 + 2 * i, 35);
+//   }
+
+//   requestId = window.requestAnimationFrame(Draw);
+// }
+
+function drawPoint(t, r, h) {
+
+  x = cx + R * Math.cos(t);
+  y = cy + R * Math.sin(t) * Math.cos(t);
+
+  // ctx.fillStyle = Grd(x, y, r, h)
+
+  // ctx.beginPath();
+  // ctx.arc(x, y, r, 0, 2 * Math.PI);
+  // ctx.fill();
+}
+// requestId = window.requestAnimationFrame(Draw);
+
+// function Grd(x, y, r, h) {
+//   grd = ctx.createRadialGradient(x, y - .5 * r, 0, x, y - .5 * r, r);
+//   grd.addColorStop(0, 'hsla(' + h + ',90%,60%,1)');
+//   grd.addColorStop(1, 'hsla(' + h + ',90%,10%,.9)');
+
+//   return grd;
+// }
+
+
   function step(timestamp)
   {
-    var progress, x, y;
+   t += .03;
+    for (var i = 0; i < 15; i++) {
+      drawPoint(t + i / 20, 5 + 2 * i, 35);
+    }
+    console.log(x, y, "x and y");
+
+    // var progress, x, y;
     if(start === null) {
       start = timestamp;
       stretchFactor = 1 + (Math.random() * 3);
     }
 
-    progress = (timestamp - start) / duration / 1000; // percent
+    // progress = (timestamp - start) / duration / 1000; // percent
     // console.log((timestamp - start)/duration, "timestamp");
     // console.log(((timestamp - start)/duration)+rando_num(1, 100), "tampstamp plus rando num");
     // console.log(((timestamp - start)/duration)+rando_num(1, 100)/1000, "tampstamp percent");
 
-    x = stretchFactor * Math.sin(progress * 2 * Math.PI); // x = ƒ(t)
-    y = Math.cos(progress * 2 * Math.PI); // y = ƒ(t)
+    // x = stretchFactor * Math.sin(progress * 2 * Math.PI); // x = ƒ(t)
+    // y = Math.cos(progress * 2 * Math.PI); // y = ƒ(t)
 
     // x = rando_num(0, 10) * Math.sin(progress * 2 * Math.PI); // x = ƒ(t)
     // y = Math.cos(rando_num(0, 10) * 2 * Math.PI); // y = ƒ(t)
 
     // for(var i = 0; i < fairy.length; i++) {
-      fairy[0].style.left = maxX/2 + (gridSize * x) + "px";
-      fairy[0].style.bottom = maxY/2 + (gridSize * y) + "px";
-      fairy[1].style.left = maxX/3 + (gridSize * x) + "px";
-      fairy[1].style.bottom = maxY/3 + (gridSize * y) + "px";
+      // fairy[0].style.left = maxX/2 + (gridSize * x) + "px";
+      // fairy[0].style.bottom = maxY/2 + (gridSize * y) + "px";
+      // fairy[1].style.left = maxX/3 + (gridSize * x) + "px";
+      // fairy[1].style.bottom = maxY/3 + (gridSize * y) + "px";
     // }
+    fairy[0].style.left = x+"px";
+    fairy[0].style.bottom = y+"px";
   
 
-    if(progress >= 1) start = null; // reset to start position
+    // if(progress >= 1) start = null; // reset to start position
     requestAnimationFrame(step);
   }
 
@@ -139,63 +189,4 @@
 
 })();
   </script>
- <!--  <script>
-  //update them all first
-  for(var i = 0; i < document.querySelectorAll(".demo-dot").length; i++) {
-  	var x1 = rando_num(0, 1);
-  	var x2 = rando_num(0, 1);
-  	var y1 = rando_num(0, 10);
-  	var y2 = rando_num(0, 10);
-  	document.querySelectorAll(".demo-dot")[i].setAttribute("style", "animation: xAxis "+Math.round(rando_num(0.5, 4))+"s infinite cubic-bezier("+x1+", "+y1+","+x2+","+y2+");");
-  }
-  update_bezier();
-
-  function rando_num(min, max) {
-  	return Math.random() * (max - min) + min;
-  }
-
-  function update_bezier() {
-  	//grab random demo-dot
-  	var rando_fairy = rando_num(0, document.querySelectorAll(".demo-dot").length);
-  	// console.log(Math.floor(rando_fairy));
-  	//todo: update where style is at
-  	console.log(window.getComputedStyle(document.querySelectorAll('.demo-dot')[0], ':after').getPropertyValue('style'));
-  	var chosen = document.querySelectorAll(".demo-dot")[Math.floor(rando_num(0, document.querySelectorAll(".demo-dot").length))];
-  	console.log(chosen);
-  	var x1 = rando_num(0, 1);
-  	var x2 = rando_num(0, 1);
-  	var y1 = rando_num(0, 10);
-  	var y2 = rando_num(0, 10);
-
-    var x = rando_num(0,4) * Math.sin(rando_num(1,10) * 2 * Math.PI); // x = ƒ(t)
-    var y = Math.cos(rando_num(0,10) * 2 * Math.PI); // y = ƒ(t)
-  	chosen.setAttribute("style", "animation: xAxis "+x+");");
-    console.log(chosen);
-    // var color = window.getComputedStyle(document.querySelector('.demo-dot'), ':after').getPropertyValue('style');
-    // console.log(color, "Style for after");
-//     var color = window.getComputedStyle(
-//   document.querySelector('.element'), ':before'
-
-// ).getPropertyValue('color')
-  	// chosen.setAttribute("style", "animation: yAxis "+rando_num(0.5, 4)+"s infinite cubic-bezier("+x1+", "+y1+","+x2+","+y2+");");
-  }
-
-  setInterval(update_bezier, 2000);
-  	//reference - https://github.com/yairEO/pathAnimator/
-    // https://codepen.io/danwilson/post/css-motion-paths
-  	//https://github.com/epistemex/cardinal-spline-js
-  	//http://bashooka.com/coding/particle-effect-animation-tutorials-examples/
-  	// cubic-bezier(x1, y1, x2, y2) - x1 and x2 must be in the range [0, 1] or the value is invalid.
-  	//make the 50% translate across the width of the screen
-
-
-    //sudo code for a figure 8
-//     center = [thisComp.width,thisComp.height]/2;
-// radius = 200;
-// period = 3;
-// angle = 2*Math.PI*time/period;
-// x = 2*radius*Math.cos(angle)*Math.sqrt(Math.cos(angle)*Math.cos(angle));
-// y = 2*radius*Math.cos(angle)*Math.sin(angle);
-// center + [x,y]
-  </script> -->
 </html>
