--- a/index.html
+++ b/index.html
@@ -31,42 +31,6 @@
     /*background-image: radial-gradient(1px at 10px 50% , rgba(255,153,0, 1) 0%, rgba(255,255, 0, 0.2), rgba(255, 255, 0, 0) 20px);*/
     background-image: radial-gradient(1px at 20px 50% , rgba(255,153,0, 1), rgba(255,255, 0, 0.4), rgba(255, 255, 0, 0) 22px)
 	}
-
-	@-webkit-keyframes yAxis {
-	  50% {
-	    -webkit-animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-	    animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-	    -webkit-transform: translateY(-100px);
-	    transform: translateY(-100px);
-	  }
-	}
-
-	@keyframes yAxis {
-	  50% {
-	    -webkit-animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-	    animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
-	    -webkit-transform: translateY(-100px);
-	    transform: translateY(-100px);
-	  }
-	}
-
-	@-webkit-keyframes xAxis {
-	  50% {
-	    -webkit-animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-	    animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-	    -webkit-transform: translateX(100px);
-	    transform: translateX(100px);
-	  }
-	}
-
-	@keyframes xAxis {
-	  50% {
-	    -webkit-animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-	    animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-	    -webkit-transform: translateX(100px);
-	    transform: translateX(100px);
-	  }
-	}
     </style>
   </head>
   <body>
@@ -82,6 +46,7 @@
 
 (function() {
 
+
   function rando_num(min, max) {
     return Math.random() * (max - min) + min;
   }
@@ -93,7 +58,22 @@
   console.log(field, field.innerWidth, "client width");
   // var ball = document.getElementById("ball");
   var fairy = document.getElementsByClassName("demo-dot");
-  console.log(fairy);
+  // [{},{speed}]
+  var fairylist = [];
+  for(var i = 0; i < fairy.length; i++) {
+    fairy[i].style.left = (Math.random() * window.innerWidth)+"px";
+    fairy[i].style.bottom = (Math.random() * window.innerHeight)+"px";
+    fairylist.push({
+      fairy: fairy[i], 
+      R: 100+(Math.random()* 200),
+      speed: (Math.random() * 0.05),
+      x: (Math.random() * window.innerWidth),
+      y: (Math.random() * window.innerHeight),
+      blink: false,
+      fade: false
+    })
+  }
+  console.log(fairylist);
 
   var maxX = field.innerWidth - fairy[0].offsetWidth;
   var maxY = field.innerHeight - fairy[0].offsetHeight;
@@ -112,8 +92,8 @@ var cx = window.innerWidth / 2;
 
 var R = 300;
 var t = 0;
-var x;
-var y;
+// var x;
+// var y;
 var variation;
 
 //make different fairies on different patterns
@@ -127,13 +107,13 @@ function update_variation() {
   //550 is a good stop - some percent of the screen?
   //currently going to get stuck between those very quickly V
   if(R <= cx/2) {
-    console.log("here");
+    // console.log("here");
     R += Math.floor((Math.random() * 1.1));
   } else {
-    console.log("no here");
+    // console.log("no here");
     R -= Math.floor((Math.random() * 1.1));
   }
-  console.log(R);
+  // console.log(R);
 }
 
 function drawPoint(t, r, h) {
@@ -150,10 +130,10 @@ function drawPoint(t, r, h) {
   function step(timestamp)
   {
     //speed
-    t += .03;
-    for (var i = 0; i < 15; i++) {
-      drawPoint(t + i / 20, 5 + 2 * i, 35);
-    }
+    // t += .03;
+    // for (var i = 0; i < 15; i++) {
+    //   drawPoint(t + i / 20, 5 + 2 * i, 35);
+    // }
     // console.log(x, y, "x and y");
 
     // var progress, x, y;
@@ -163,7 +143,31 @@ function drawPoint(t, r, h) {
       // variation = 1 + (Math.random() * 3);
       // console.log(variation);
     }
-    update_variation();
+    // update_variation();
+    for(var j = 0; j < fairylist.length; j++) {
+      fairylist[j].speed += 0.1+(Math.random()* .03);
+      // for (var k = 0; k < 15; i++) {
+        // var k =0;
+        // drawPoint(t + k / 20, 5 + 2 * k, 35);
+        // var theta = t+k/20;
+        // var r = 5 + 2 * k;
+        // var h = 35;
+        //stretch gives them a lil wiggle to show it's alive
+        // var stretch = 1+(Math.random() * 0.03);
+        //cx and cy are positions
+        //R is scale
+        cx = fairylist[j].x;
+        cy = fairylist[j].y;
+        // x = cx + R * stretch * Math.cos(t);
+        // console.log(fairylist[j].speed);
+        x = cx + fairylist[j].R * Math.cos(fairylist[j].speed);
+        y = cy + fairylist[j].R * Math.sin(fairylist[j].speed) * Math.cos(fairylist[j].speed);
+        fairylist[j].fairy.style.left = x+"px";
+        fairylist[j].fairy.style.bottom = y+"px";
+        // requestAnimationFrame(step);
+
+      // }
+    }
     // console.log(t);
 
     // progress = (timestamp - start) / duration / 1000; // percent
@@ -183,8 +187,8 @@ function drawPoint(t, r, h) {
       // fairy[1].style.left = maxX/3 + (gridSize * x) + "px";
       // fairy[1].style.bottom = maxY/3 + (gridSize * y) + "px";
     // }
-    fairy[0].style.left = x+"px";
-    fairy[0].style.bottom = y+"px";
+    // fairy[0].style.left = x+"px";
+    // fairy[0].style.bottom = y+"px";
   
 
     // if(progress >= 1) start = null; // reset to start position
