--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     	background-image: url('forest.jpg');
     	background-repeat: no-repeat;
     	background-size: 100% auto;
+      overflow: hidden;
     }
 
     .demo-dot {
-     /*-webkit-animation: xAxis 2.5s infinite cubic-bezier(0.02, 0.01, 0.21, 1);*/
-     /*animation: xAxis 2.5s infinite cubic-bezier(0.02, 0.01, 0.21, 1);*/
      position: absolute;
    }
 
@@ -22,16 +21,9 @@
      width: 40px;
      height: 40px;
      border-radius: 20px;
-     /*background-color: #fff;*/
-
-	 /* -webkit-animation: yAxis 2.5s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
-	  animation: yAxis 2.5s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
-    */
-    /*background: radial-gradient(ellipse at 50% -3%, rgba(96, 251, 202, 0.8), rgba(112, 220, 255, 0.5), rgba(255, 116, 225, 0.0) 50%), radial-gradient(circle at 80% 10%, rgba(96, 251, 202, 0.8), rgba(255, 255, 255, 0.0) 2%), radial-gradient(circle at 90% 20%, rgba(255, 251, 202, 0.8), rgba(255, 255, 255, 0.0) 1%);*/
-    /*background-image: radial-gradient(1px at 10px 50% , rgba(255,153,0, 1) 0%, rgba(255,255, 0, 0.2), rgba(255, 255, 0, 0) 20px);*/
-    background-image: radial-gradient(1px at 20px 50% , rgba(255,153,0, 1), rgba(255,255, 0, 0.4), rgba(255, 255, 0, 0) 22px)
-  }
-</style>
+     background-image: radial-gradient(1px at 20px 50% , rgba(255,153,0, 1), rgba(255,255, 0, 0.4), rgba(255, 255, 0, 0) 22px)
+   }
+ </style>
 </head>
 <body>
  <div id="holder">
@@ -46,6 +38,11 @@
 
 (function() {
 
+  function rando_style() {
+    var styles = ["bezier", "circle", "lemniscate"];
+    return styles[Math.floor(Math.random()*styles.length)];
+  }
+
 
   function rando_num(min, max) {
     return Math.random() * (max - min) + min;
@@ -53,55 +50,30 @@
 
   window.requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
 
-  // var field = document.getElementById("field");
-  var field = window;
-  console.log(field, field.innerWidth, "client width");
-  // var ball = document.getElementById("ball");
   var fairy = document.getElementsByClassName("demo-dot");
-  // [{},{time}]
   var fairylist = [];
   for(var i = 0; i < fairy.length; i++) {
-    // fairy[i].style.left = (Math.random() * window.innerWidth)+"px";
-    // fairy[i].style.bottom = (Math.random() * window.innerHeight)+"px";
     fairylist.push({
       fairy: fairy[i], 
       R: 50+(Math.random()* 300),
       time:  (Math.random() * 150),
-      // time: ((Math.random() * 8))/1000,
-      // time: .03,
       x: (Math.random() * window.innerWidth),
-      y: (Math.random() * window.innerHeight),
+      y: (Math.random() * window.innerHeight/2),
       blink: false,
       fade: false,
-      //0 or 1 for true or false
       change_r: Math.round(Math.random()),
-      circle: Math.round(Math.random()),
+      circle: Math.round(Math.random()) === 1 ? true : false,
       circle_speed: Math.round(Math.random()*3),
-      circle_angle: Math.round(Math.random()*360)
+      circle_angle: Math.round(Math.random()*360),
+      bezier: Math.round(Math.random()) === 1 ? true: false,
+      animation_style: rando_style()
     });
   }
   console.log(fairylist);
 
-  // var maxX = field.innerWidth - fairy[0].offsetWidth;
-  // var maxY = field.innerHeight - fairy[0].offsetHeight;
-
-  var duration = 4; // seconds
-  var gridSize = 100; // pixels
+  var duration = 10; // seconds
 
   var start = null;
-  var stretchFactor;
-
-  var cy = window.innerHeight / 2;
-  // cy = ch / 2;
-  var cx = window.innerWidth / 2;
-  // cx = cw / 2;
-
-
-  var R = 300;
-// var t = 0;
-// var x;
-// var y;
-var variation;
 
 //make different fairies on different patterns
 
@@ -123,102 +95,52 @@ function update_variation() {
   // console.log(R);
 }
 
-// function drawPoint(t, r, h) {
-//   //stretch gives them a lil wiggle to show it's alive
-//   var stretch = 1+(Math.random() * 0.03);
-//   //cx and cy are positions
-//   //R is scale
-//   x = cx + R * stretch * Math.cos(t);
-//   // x = cx + R * stretch * Math.cos(t);
-//   y = cy + R * Math.sin(t) * Math.cos(t);
-
-// }
-
 function step(timestamp)
 {
-    //time
-    // t += .03;
-    // for (var i = 0; i < 15; i++) {
-    //   drawPoint(t + i / 20, 5 + 2 * i, 35);
-    // }
-    // console.log(x, y, "x and y");
+  if(start === null) {
+    start = timestamp;
+    stretchFactor = 1 + (Math.random() * 3);
+  }
+  for(var j = 0; j < fairylist.length; j++) {
+    fairylist[j].time += 0.05+(Math.random() * 0.03);
 
-    // var progress, x, y;
-    if(start === null) {
-      start = timestamp;
-      stretchFactor = 1 + (Math.random() * 3);
-      // variation = 1 + (Math.random() * 3);
-      // console.log(variation);
-    }
-    // update_variation();
-    for(var j = 0; j < fairylist.length; j++) {
-      fairylist[j].time += 0.05+(Math.random() * 0.03);
-      // for (var k = 0; k < 15; i++) {
-        // var k =0;
-        // drawPoint(t + k / 20, 5 + 2 * k, 35);
-        // var theta = t+k/20;
-        // var r = 5 + 2 * k;
-        // var h = 35;
-        //stretch gives them a lil wiggle to show it's alive
-        // var stretch = 1+(Math.random() * 0.03);
-        //cx and cy are positions
-        //R is scale
+    cx = fairylist[j].x;
+    cy = fairylist[j].y;
 
-        cx = fairylist[j].x;
-        cy = fairylist[j].y;
+    if(fairylist[j].animation_style == "circle") {
+      fairylist[j].circle_angle+=fairylist[j].circle_speed;
+      if (fairylist[j].circle_angle>360) fairylist[j].circle_angle = 0;
+      x = cx + fairylist[j].R * Math.cos(fairylist[j].circle_angle * Math.PI / 180);
+      y = cy + fairylist[j].R * Math.sin(fairylist[j].circle_angle * Math.PI / 180);
+    } else if(fairylist[j].animation_style == "lemniscate") {
 
-        if(fairylist[j].circle == 1) {
-          // fairylist[j].circle_angle++;
-          fairylist[j].circle_angle+=fairylist[j].circle_speed;
-          if (fairylist[j].circle_angle>360) fairylist[j].circle_angle = 0;
-          x = cx + fairylist[j].R * Math.cos(fairylist[j].circle_angle * Math.PI / 180);
-          y = cy + fairylist[j].R * Math.sin(fairylist[j].circle_angle * Math.PI / 180);
-        } else {
+      if(fairylist[j].change_r == 1) {
+        if (fairylist[j].R < 300) {
+          fairylist[j].R += 1+(Math.random()*10);
+        }
+      }
 
-          if(fairylist[j].change_r == 1) {
-            if (fairylist[j].R < 300) {
-              fairylist[j].R += 1+(Math.random()*10);
-            }
+      x = cx + fairylist[j].R * Math.cos(fairylist[j].time);
+      y = cy + fairylist[j].R * Math.sin(fairylist[j].time) * Math.cos(fairylist[j].time);
+
+    } else if(fairylist[j].animation_style == "bezier") {
+
+      if(start === null) start = timestamp;
+
+      var progress = (timestamp - start) / duration / 1000;
+          x = progress * (window.innerWidth*3) / (window.innerWidth/20); // x = ƒ(t)
+          y = 8 * Math.sin(x); // y = ƒ(x)
+          if(x>window.innerWidth) {
+            x = 0;
           }
-
-          // x = cx + R * stretch * Math.cos(t);
-          // console.log(fairylist[j].time);
-          x = cx + fairylist[j].R * Math.cos(fairylist[j].time);
-          y = cy + fairylist[j].R * Math.sin(fairylist[j].time) * Math.cos(fairylist[j].time);
+          if(progress >= 1) start = null;
 
         }
         fairylist[j].fairy.style.left = x+"px";
         fairylist[j].fairy.style.bottom = y+"px";
-        // requestAnimationFrame(step);
-
-      // }
+      }
+      requestAnimationFrame(step);
     }
-    // console.log(t);
-
-    // progress = (timestamp - start) / duration / 1000; // percent
-    // console.log((timestamp - start)/duration, "timestamp");
-    // console.log(((timestamp - start)/duration)+rando_num(1, 100), "tampstamp plus rando num");
-    // console.log(((timestamp - start)/duration)+rando_num(1, 100)/1000, "tampstamp percent");
-
-    // x = stretchFactor * Math.sin(progress * 2 * Math.PI); // x = ƒ(t)
-    // y = Math.cos(progress * 2 * Math.PI); // y = ƒ(t)
-
-    // x = rando_num(0, 10) * Math.sin(progress * 2 * Math.PI); // x = ƒ(t)
-    // y = Math.cos(rando_num(0, 10) * 2 * Math.PI); // y = ƒ(t)
-
-    // for(var i = 0; i < fairy.length; i++) {
-      // fairy[0].style.left = maxX/2 + (gridSize * x) + "px";
-      // fairy[0].style.bottom = maxY/2 + (gridSize * y) + "px";
-      // fairy[1].style.left = maxX/3 + (gridSize * x) + "px";
-      // fairy[1].style.bottom = maxY/3 + (gridSize * y) + "px";
-    // }
-    // fairy[0].style.left = x+"px";
-    // fairy[0].style.bottom = y+"px";
-
-
-    // if(progress >= 1) start = null; // reset to start position
-    requestAnimationFrame(step);
-  }
 // setInterval(update_variation(variation), 1000);
 
 requestAnimationFrame(step);
