fixed scrollbar issue

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     	background-image: url('forest.jpg');
     	background-repeat: no-repeat;
     	background-size: 100% auto;
+    	overflow: hidden;
     }
 
     .demo-dot {
