Clean up a little

--- a/index.html
+++ b/index.html
@@ -1,32 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="main.css" />
   <title>Happy Wedding Day!</title>
-  <style>
-    body {
-    	background-image: url('forest.jpg');
-    	background-repeat: no-repeat;
-    	background-size: 100% auto;
-    	overflow: hidden;
-    }
-
-    .demo-dot {
-     /*-webkit-animation: xAxis 2.5s infinite cubic-bezier(0.02, 0.01, 0.21, 1);*/
-     /*animation: xAxis 2.5s infinite cubic-bezier(0.02, 0.01, 0.21, 1);*/
-     position: absolute;
-   }
-
-   .demo-dot::after {
-     content: '';
-     display: block;
-     width: 40px;
-     height: 40px;
-     border-radius: 20px;
-    background-image: radial-gradient(1px at 20px 50% , rgba(255,153,0, 1), rgba(255,255, 0, 0.4), rgba(255, 255, 0, 0) 22px)
-  }
-</style>
 </head>
 <body>
  <div id="holder">
@@ -42,189 +19,5 @@
   <div class="demo-dot"></div>
 </div>
 </body>
-<script>
-  // Original JavaScript code by Chirp Internet: www.chirp.com.au
-// Please acknowledge use of this code by including this header.
-
-(function() {
-
-
-  function rando_num(min, max) {
-    return Math.random() * (max - min) + min;
-  }
-
-  window.requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
-
-  // var field = document.getElementById("field");
-  var field = window;
-  console.log(field, field.innerWidth, "client width");
-  // var ball = document.getElementById("ball");
-  var fairy = document.getElementsByClassName("demo-dot");
-  // [{},{time}]
-  var fairylist = [];
-  for(var i = 0; i < fairy.length; i++) {
-    fairylist.push({
-      fairy: fairy[i], 
-      R: 50+(Math.random()* 300),
-      time:  (Math.random() * 150),
-      x: (Math.random() * window.innerWidth),
-      y: (Math.random() * window.innerHeight),
-      blink: false,
-      fade: false,
-      change_r: Math.round(Math.random()),
-      circle: Math.round(Math.random()),
-      circle_speed: Math.round(Math.random()*3),
-      circle_angle: Math.round(Math.random()*360),
-      size: Math.round(Math.random()*50)
-    });
-    fairylist[i].fairy.style.width = fairylist[i].size+"px";
-    fairylist[i].fairy.style.height = fairylist[i].size+"px";
-    fairylist[i].fairy.style.borderRadius = fairylist[i].size/2+"px";
-    if(fairylist[i].circle_speed === 0) fairylist[i].circle_speed = 1;
-  }
-  console.log(fairylist);
-
-  // var maxX = field.innerWidth - fairy[0].offsetWidth;
-  // var maxY = field.innerHeight - fairy[0].offsetHeight;
-
-  var duration = 4; // seconds
-  var gridSize = 100; // pixels
-
-  var start = null;
-  var stretchFactor;
-
-  var cy = window.innerHeight / 2;
-  // cy = ch / 2;
-  var cx = window.innerWidth / 2;
-  // cx = cw / 2;
-
-
-  var R = 300;
-// var t = 0;
-// var x;
-// var y;
-var variation;
-
-//make different fairies on different patterns
-
-function update_variation() {
-  // x = 1 + Math.floor((Math.random() * 3));
-  // lets them randomly teleport - not sure if desired until we see a bunch on screen
-  // t += Math.floor((Math.random() * 1.003));
-  //increase or decrease R
-  //make sure to decrease or reset after a threshold - it getting larger will makei t go 'faster'
-  //550 is a good stop - some percent of the screen?
-  //currently going to get stuck between those very quickly V
-  if(R <= cx/2) {
-    // console.log("here");
-    R += Math.floor((Math.random() * 1.1));
-  } else {
-    // console.log("no here");
-    R -= Math.floor((Math.random() * 1.1));
-  }
-  // console.log(R);
-}
-
-// function drawPoint(t, r, h) {
-//   //stretch gives them a lil wiggle to show it's alive
-//   var stretch = 1+(Math.random() * 0.03);
-//   //cx and cy are positions
-//   //R is scale
-//   x = cx + R * stretch * Math.cos(t);
-//   // x = cx + R * stretch * Math.cos(t);
-//   y = cy + R * Math.sin(t) * Math.cos(t);
-
-// }
-
-function step(timestamp)
-{
-    //time
-    // t += .03;
-    // for (var i = 0; i < 15; i++) {
-    //   drawPoint(t + i / 20, 5 + 2 * i, 35);
-    // }
-    // console.log(x, y, "x and y");
-
-    // var progress, x, y;
-    if(start === null) {
-      start = timestamp;
-      stretchFactor = 1 + (Math.random() * 3);
-      // variation = 1 + (Math.random() * 3);
-      // console.log(variation);
-    }
-    // update_variation();
-    for(var j = 0; j < fairylist.length; j++) {
-      fairylist[j].time += 0.05+(Math.random() * 0.03);
-      // for (var k = 0; k < 15; i++) {
-        // var k =0;
-        // drawPoint(t + k / 20, 5 + 2 * k, 35);
-        // var theta = t+k/20;
-        // var r = 5 + 2 * k;
-        // var h = 35;
-        //stretch gives them a lil wiggle to show it's alive
-        // var stretch = 1+(Math.random() * 0.03);
-        //cx and cy are positions
-        //R is scale
-
-        cx = fairylist[j].x;
-        cy = fairylist[j].y;
-
-        if(fairylist[j].circle == 1) {
-          // fairylist[j].circle_angle++;
-          fairylist[j].circle_angle+=fairylist[j].circle_speed;
-          if (fairylist[j].circle_angle>360) fairylist[j].circle_angle = 0;
-          x = cx + fairylist[j].R * Math.cos(fairylist[j].circle_angle * Math.PI / 180);
-          y = cy + fairylist[j].R * Math.sin(fairylist[j].circle_angle * Math.PI / 180);
-        } else {
-
-          if(fairylist[j].change_r == 1) {
-            if (fairylist[j].R < 300) {
-              fairylist[j].R += 1+(Math.random()*10);
-            }
-          }
-
-          // x = cx + R * stretch * Math.cos(t);
-          // console.log(fairylist[j].time);
-          x = cx + fairylist[j].R * Math.cos(fairylist[j].time);
-          y = cy + fairylist[j].R * Math.sin(fairylist[j].time) * Math.cos(fairylist[j].time);
-
-        }
-        fairylist[j].fairy.style.left = x+"px";
-        fairylist[j].fairy.style.bottom = y+"px";
-        // requestAnimationFrame(step);
-
-      // }
-    }
-    // console.log(t);
-
-    // progress = (timestamp - start) / duration / 1000; // percent
-    // console.log((timestamp - start)/duration, "timestamp");
-    // console.log(((timestamp - start)/duration)+rando_num(1, 100), "tampstamp plus rando num");
-    // console.log(((timestamp - start)/duration)+rando_num(1, 100)/1000, "tampstamp percent");
-
-    // x = stretchFactor * Math.sin(progress * 2 * Math.PI); // x = ƒ(t)
-    // y = Math.cos(progress * 2 * Math.PI); // y = ƒ(t)
-
-    // x = rando_num(0, 10) * Math.sin(progress * 2 * Math.PI); // x = ƒ(t)
-    // y = Math.cos(rando_num(0, 10) * 2 * Math.PI); // y = ƒ(t)
-
-    // for(var i = 0; i < fairy.length; i++) {
-      // fairy[0].style.left = maxX/2 + (gridSize * x) + "px";
-      // fairy[0].style.bottom = maxY/2 + (gridSize * y) + "px";
-      // fairy[1].style.left = maxX/3 + (gridSize * x) + "px";
-      // fairy[1].style.bottom = maxY/3 + (gridSize * y) + "px";
-    // }
-    // fairy[0].style.left = x+"px";
-    // fairy[0].style.bottom = y+"px";
-
-
-    // if(progress >= 1) start = null; // reset to start position
-    requestAnimationFrame(step);
-  }
-// setInterval(update_variation(variation), 1000);
-
-requestAnimationFrame(step);
-
-})();
-</script>
+<script type="text/javascript" src="main.js"></script>
 </html>
